Add item to list

--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 				>Search product:
 				<input id="search-product" type="search" placeholder="Search item" class="search-field" />
 			</label>
-
-			<!-- <input type="submit" value="Search" /> -->
+			<label>
+				<input class="add-input" type="input" placeholder="Add product" />
+				<button class="add-btn" type="submit">Add item</button>
+			</label>
 			<output></output>
 		</form>
 		<ul class="list"></ul>
 		<script src="./js/search.js"></script>
+		<script src="./js/addItem.js"></script>
 	</body>
 </html>
